refactored, made posehistory a linked list